Added spotify authentication

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".mainactivities.profile.EditProfileActivity"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".mainactivities.SpotifyClientActivity"></activity>
         <activity android:name=".mainactivities.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
