--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,5 +39,8 @@ dependencies {
     implementation 'com.github.parse-community.Parse-SDK-Android:parse:1.24.2'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.8.1' // for logging API calls to LogCat
     implementation "com.google.android.material:material:1.0.0"
+    implementation 'com.spotify.android:auth:1.1.0'
+    implementation "com.google.code.gson:gson:2.8.5"
+    implementation 'com.android.volley:volley:1.1.1'
 
 }
