--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment:2.3.0'
     implementation 'androidx.navigation:navigation-ui:2.3.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation project(path: ':spotify-web-api-android-0.4.1')
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
@@ -43,5 +44,12 @@ dependencies {
     implementation 'com.spotify.android:auth:1.1.0'
     implementation "com.google.code.gson:gson:2.8.5"
     implementation 'com.android.volley:volley:1.1.1'
+    implementation 'com.squareup.okhttp:okhttp:2.2.0'
+    implementation 'com.github.kaaes:spotify-web-api-android:0.4.1'
+    implementation 'com.squareup.retrofit:retrofit:1.9.0'
+    implementation 'com.google.guava:guava:18.0'
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    // Glide v4 uses this new annotation processor -- see https://bumptech.github.io/glide/doc/generatedapi.html
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 
 }
