--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,5 +51,8 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     // Glide v4 uses this new annotation processor -- see https://bumptech.github.io/glide/doc/generatedapi.html
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+    implementation "androidx.exifinterface:exifinterface:1.0.0"
+    implementation 'com.google.android.material:material:<version>'
+    implementation 'com.github.mancj:MaterialSearchBar:0.8.5'
 
 }
