--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:usesCleartextTraffic="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/Theme.MaterialComponents.Light.Bridge">
 
         <provider
             android:name="androidx.core.content.FileProvider"
@@ -34,7 +34,7 @@
         <activity
             android:name=".mainactivities.MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/Theme.MaterialComponents.Light.NoActionBar.Bridge"></activity>
 
     </application>
 
